[build-system]
requires = ["hatchling", "hatch_vcs"]
build-backend = "hatchling.build"

[project]
name = "pytask_stata"
description = "Execute do-files with Stata and pytask."
authors = [{ name = "Tobias Raabe", email = "raabe@posteo.de" }]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = ["click", "pytask>=0.4"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.optional-dependencies]
test = ["pytest", "pytest-cov", "pytest-xdist"]
typing = ["mypy"]

[project.urls]
Homepage = "https://github.com/pytask-dev/pytask-stata"
Documentation = "https://github.com/pytask-dev/pytask-stata"
Github = "https://github.com/pytask-dev/pytask-stata"
Tracker = "https://github.com/pytask-dev/pytask-stata/issues"
Changelog = "https://github.com/pytask-dev/pytask-stata/blob/main/CHANGES.md"

[project.entry-points]
pytask = { pytask_stata = "pytask_stata.plugin" }

[tool.rye]
managed = true
dev-dependencies = [
    "tox-uv>=1.8.2",
]

[tool.hatch.build.hooks.vcs]
version-file = "src/pytask_stata/_version.py"

[tool.hatch.build.targets.sdist]
exclude = ["tests"]
only-packages = true

[tool.hatch.build.targets.wheel]
exclude = ["tests"]
only-packages = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["src", "tests"]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
ignore_errors = true

[tool.ruff]
target-version = "py38"
fix = true
unsafe-fixes = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN101",
    "ANN102",
    "ANN401", # flake8-annotate typing.Any
    "COM812", # Comply with ruff-format.
    "ISC001", # Comply with ruff-format.
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "ANN", "S101"]
"__init__.py" = ["D104"]

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pytest.ini_options]
# Do not add src since it messes with the loading of pytask-parallel as a plugin.
testpaths = ["tests"]
markers = [
    "wip: Tests that are work-in-progress.",
    "unit: Flag for unit tests which target mainly a single function.",
    "integration: Flag for integration tests which may comprise of multiple unit tests.",
    "end_to_end: Flag for tests that cover the whole program.",
]
norecursedirs = [".idea", ".tox"]
