[metadata]
name = pytask_stata
description = Execute do-files with Stata and pytask.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pytask-dev/pytask-stata
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Documentation = https://github.com/pytask-dev/pytask-stata
    Github = https://github.com/pytask-dev/pytask-stata
    Tracker = https://github.com/pytask-dev/pytask-stata/issues
    Changelog = https://github.com/pytask-dev/pytask-stata/blob/main/CHANGES.rst

[options]
packages = find:
install_requires =
    click
    pytask>=0.1.0
python_requires = >=3.7
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_stata = pytask_stata.plugin

[check-manifest]
ignore =
    src/pytask_stata/_version.py
