[metadata]
name = pytask_stata
description = Execute do-files with Stata and pytask.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pytask-dev/pytask-stata
author = Tobias Raabe
author_email = raabe@posteo.de
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Documentation = https://github.com/pytask-dev/pytask-stata
    Github = https://github.com/pytask-dev/pytask-stata
    Tracker = https://github.com/pytask-dev/pytask-stata/issues
    Changelog = https://github.com/pytask-dev/pytask-stata/blob/main/CHANGES.md

[options]
packages = find:
install_requires =
    click
    pytask>=0.3
python_requires = >=3.8
include_package_data = True
package_dir = =src
zip_safe = False

[options.packages.find]
where = src

[options.entry_points]
pytask =
    pytask_stata = pytask_stata.plugin

[check-manifest]
ignore =
    src/pytask_stata/_version.py
